dsl/grammar/.antlr/.antlr/BedParser.java
// Generated from c:\Users\joxto\Downloads\CFD-PIPELINE-TCC-1\dsl\grammar\.antlr\Bed.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BedParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, NUMBER=70, INTEGER=71, UNIT=72, STRING=73, 
		BOOLEAN=74, WS=75, COMMENT=76, BLOCK_COMMENT=77;
	public static final int
		RULE_bedFile = 0, RULE_section = 1, RULE_bedSection = 2, RULE_bedProperty = 3, 
		RULE_lidsSection = 4, RULE_lidsProperty = 5, RULE_lidType = 6, RULE_particlesSection = 7, 
		RULE_particlesProperty = 8, RULE_particleKind = 9, RULE_packingSection = 10, 
		RULE_packingProperty = 11, RULE_packingMethod = 12, RULE_exportSection = 13, 
		RULE_exportProperty = 14, RULE_formatList = 15, RULE_wallMode = 16, RULE_fluidMode = 17, 
		RULE_cfdSection = 18, RULE_cfdProperty = 19, RULE_cfdRegime = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"bedFile", "section", "bedSection", "bedProperty", "lidsSection", "lidsProperty", 
			"lidType", "particlesSection", "particlesProperty", "particleKind", "packingSection", 
			"packingProperty", "packingMethod", "exportSection", "exportProperty", 
			"formatList", "wallMode", "fluidMode", "cfdSection", "cfdProperty", "cfdRegime"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'bed'", "'{'", "'}'", "'diameter'", "'='", "';'", "'height'", 
			"'wall_thickness'", "'clearance'", "'material'", "'roughness'", "'lids'", 
			"'top_type'", "'bottom_type'", "'top_thickness'", "'bottom_thickness'", 
			"'seal_clearance'", "'flat'", "'hemispherical'", "'none'", "'particles'", 
			"'kind'", "'count'", "'target_porosity'", "'density'", "'mass'", "'restitution'", 
			"'friction'", "'rolling_friction'", "'linear_damping'", "'angular_damping'", 
			"'seed'", "'sphere'", "'cube'", "'cylinder'", "'packing'", "'method'", 
			"'gravity'", "'substeps'", "'iterations'", "'damping'", "'rest_velocity'", 
			"'max_time'", "'collision_margin'", "'rigid_body'", "'export'", "'formats'", 
			"'['", "']'", "'units'", "'scale'", "'wall_mode'", "'fluid_mode'", "'manifold_check'", 
			"'merge_distance'", "','", "'surface'", "'solid'", "'cavity'", "'cfd'", 
			"'regime'", "'inlet_velocity'", "'fluid_density'", "'fluid_viscosity'", 
			"'max_iterations'", "'convergence_criteria'", "'write_fields'", "'laminar'", 
			"'turbulent_rans'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "NUMBER", 
			"INTEGER", "UNIT", "STRING", "BOOLEAN", "WS", "COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bed.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BedParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BedFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BedParser.EOF, 0); }
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public BedFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedFile; }
	}

	public final BedFileContext bedFile() throws RecognitionException {
		BedFileContext _localctx = new BedFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bedFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				section();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__20) | (1L << T__35) | (1L << T__45) | (1L << T__59))) != 0) );
			setState(47);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public BedSectionContext bedSection() {
			return getRuleContext(BedSectionContext.class,0);
		}
		public LidsSectionContext lidsSection() {
			return getRuleContext(LidsSectionContext.class,0);
		}
		public ParticlesSectionContext particlesSection() {
			return getRuleContext(ParticlesSectionContext.class,0);
		}
		public PackingSectionContext packingSection() {
			return getRuleContext(PackingSectionContext.class,0);
		}
		public ExportSectionContext exportSection() {
			return getRuleContext(ExportSectionContext.class,0);
		}
		public CfdSectionContext cfdSection() {
			return getRuleContext(CfdSectionContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_section);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				bedSection();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				lidsSection();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				particlesSection();
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				packingSection();
				}
				break;
			case T__45:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				exportSection();
				}
				break;
			case T__59:
				enterOuterAlt(_localctx, 6);
				{
				setState(54);
				cfdSection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BedSectionContext extends ParserRuleContext {
		public List<BedPropertyContext> bedProperty() {
			return getRuleContexts(BedPropertyContext.class);
		}
		public BedPropertyContext bedProperty(int i) {
			return getRuleContext(BedPropertyContext.class,i);
		}
		public BedSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedSection; }
	}

	public final BedSectionContext bedSection() throws RecognitionException {
		BedSectionContext _localctx = new BedSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_bedSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__0);
			setState(58);
			match(T__1);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				bedProperty();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10))) != 0) );
			setState(64);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BedPropertyContext extends ParserRuleContext {
		public BedPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bedProperty; }
	 
		public BedPropertyContext() { }
		public void copyFrom(BedPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BedWallThicknessContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedWallThicknessContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedMaterialContext extends BedPropertyContext {
		public TerminalNode STRING() { return getToken(BedParser.STRING, 0); }
		public BedMaterialContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedClearanceContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedClearanceContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedDiameterContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedDiameterContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedRoughnessContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedRoughnessContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class BedHeightContext extends BedPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public BedHeightContext(BedPropertyContext ctx) { copyFrom(ctx); }
	}

	public final BedPropertyContext bedProperty() throws RecognitionException {
		BedPropertyContext _localctx = new BedPropertyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bedProperty);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				_localctx = new BedDiameterContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				match(T__3);
				setState(67);
				match(T__4);
				setState(68);
				match(NUMBER);
				setState(69);
				match(UNIT);
				setState(70);
				match(T__5);
				}
				break;
			case T__6:
				_localctx = new BedHeightContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				match(T__6);
				setState(72);
				match(T__4);
				setState(73);
				match(NUMBER);
				setState(74);
				match(UNIT);
				setState(75);
				match(T__5);
				}
				break;
			case T__7:
				_localctx = new BedWallThicknessContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				match(T__7);
				setState(77);
				match(T__4);
				setState(78);
				match(NUMBER);
				setState(79);
				match(UNIT);
				setState(80);
				match(T__5);
				}
				break;
			case T__8:
				_localctx = new BedClearanceContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				match(T__8);
				setState(82);
				match(T__4);
				setState(83);
				match(NUMBER);
				setState(84);
				match(UNIT);
				setState(85);
				match(T__5);
				}
				break;
			case T__9:
				_localctx = new BedMaterialContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(T__9);
				setState(87);
				match(T__4);
				setState(88);
				match(STRING);
				setState(89);
				match(T__5);
				}
				break;
			case T__10:
				_localctx = new BedRoughnessContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				match(T__10);
				setState(91);
				match(T__4);
				setState(92);
				match(NUMBER);
				setState(93);
				match(UNIT);
				setState(94);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LidsSectionContext extends ParserRuleContext {
		public List<LidsPropertyContext> lidsProperty() {
			return getRuleContexts(LidsPropertyContext.class);
		}
		public LidsPropertyContext lidsProperty(int i) {
			return getRuleContext(LidsPropertyContext.class,i);
		}
		public LidsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lidsSection; }
	}

	public final LidsSectionContext lidsSection() throws RecognitionException {
		LidsSectionContext _localctx = new LidsSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lidsSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__11);
			setState(98);
			match(T__1);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				lidsProperty();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0) );
			setState(104);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LidsPropertyContext extends ParserRuleContext {
		public LidsPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lidsProperty; }
	 
		public LidsPropertyContext() { }
		public void copyFrom(LidsPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LidsSealClearanceContext extends LidsPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public LidsSealClearanceContext(LidsPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class LidsTopTypeContext extends LidsPropertyContext {
		public LidTypeContext lidType() {
			return getRuleContext(LidTypeContext.class,0);
		}
		public LidsTopTypeContext(LidsPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class LidsBottomTypeContext extends LidsPropertyContext {
		public LidTypeContext lidType() {
			return getRuleContext(LidTypeContext.class,0);
		}
		public LidsBottomTypeContext(LidsPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class LidsBottomThicknessContext extends LidsPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public LidsBottomThicknessContext(LidsPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class LidsTopThicknessContext extends LidsPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public LidsTopThicknessContext(LidsPropertyContext ctx) { copyFrom(ctx); }
	}

	public final LidsPropertyContext lidsProperty() throws RecognitionException {
		LidsPropertyContext _localctx = new LidsPropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lidsProperty);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				_localctx = new LidsTopTypeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(T__12);
				setState(107);
				match(T__4);
				setState(108);
				lidType();
				setState(109);
				match(T__5);
				}
				break;
			case T__13:
				_localctx = new LidsBottomTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__13);
				setState(112);
				match(T__4);
				setState(113);
				lidType();
				setState(114);
				match(T__5);
				}
				break;
			case T__14:
				_localctx = new LidsTopThicknessContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(116);
				match(T__14);
				setState(117);
				match(T__4);
				setState(118);
				match(NUMBER);
				setState(119);
				match(UNIT);
				setState(120);
				match(T__5);
				}
				break;
			case T__15:
				_localctx = new LidsBottomThicknessContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				match(T__15);
				setState(122);
				match(T__4);
				setState(123);
				match(NUMBER);
				setState(124);
				match(UNIT);
				setState(125);
				match(T__5);
				}
				break;
			case T__16:
				_localctx = new LidsSealClearanceContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(126);
				match(T__16);
				setState(127);
				match(T__4);
				setState(128);
				match(NUMBER);
				setState(129);
				match(UNIT);
				setState(130);
				match(T__5);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LidTypeContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(BedParser.STRING, 0); }
		public LidTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lidType; }
	}

	public final LidTypeContext lidType() throws RecognitionException {
		LidTypeContext _localctx = new LidTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lidType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_la = _input.LA(1);
			if ( !(((((_la - 18)) & ~0x3f) == 0 && ((1L << (_la - 18)) & ((1L << (T__17 - 18)) | (1L << (T__18 - 18)) | (1L << (T__19 - 18)) | (1L << (STRING - 18)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParticlesSectionContext extends ParserRuleContext {
		public List<ParticlesPropertyContext> particlesProperty() {
			return getRuleContexts(ParticlesPropertyContext.class);
		}
		public ParticlesPropertyContext particlesProperty(int i) {
			return getRuleContext(ParticlesPropertyContext.class,i);
		}
		public ParticlesSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_particlesSection; }
	}

	public final ParticlesSectionContext particlesSection() throws RecognitionException {
		ParticlesSectionContext _localctx = new ParticlesSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_particlesSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__20);
			setState(136);
			match(T__1);
			setState(138); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137);
				particlesProperty();
				}
				}
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31))) != 0) );
			setState(142);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParticlesPropertyContext extends ParserRuleContext {
		public ParticlesPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_particlesProperty; }
	 
		public ParticlesPropertyContext() { }
		public void copyFrom(ParticlesPropertyContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParticlesSeedContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesSeedContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesCountContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesCountContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesLinearDampingContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesLinearDampingContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesDensityContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public ParticlesDensityContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesKindContext extends ParticlesPropertyContext {
		public ParticleKindContext particleKind() {
			return getRuleContext(ParticleKindContext.class,0);
		}
		public ParticlesKindContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesDiameterContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public ParticlesDiameterContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesFrictionContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesFrictionContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesMassContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public TerminalNode UNIT() { return getToken(BedParser.UNIT, 0); }
		public ParticlesMassContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesTargetPorosityContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesTargetPorosityContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesRollingFrictionContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesRollingFrictionContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesAngularDampingContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesAngularDampingContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
	public static class ParticlesRestitutionContext extends ParticlesPropertyContext {
		public TerminalNode NUMBER() { return getToken(BedParser.NUMBER, 0); }
		public ParticlesRestitutionContext(ParticlesPropertyContext ctx) { copyFrom(ctx); }
	}
